--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Adam Schott - Home Page</h1>
 <p>I am learning HTML in BACS 200.</p>
-<p>I hope it starts getting fun.</p>
+<p>Today, I hope it starts getting fun.</p>
