--- a/bacs200/inspire.html
+++ b/bacs200/inspire.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>My Favorite Hero</h1>
-    <p>There's always a choice</p>>
+    <p>-There's always a choice</p>>
     <p>- Batman</p>
 
 </html>
