--- a/week4/image.html
+++ b/week4/image.html
@@ -1,3 +1,8 @@
 <h1>Image Demo</h1>
 
-<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+<p>
+    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+</p>
+<p>
+    <a href="http://AdamSchott.github.io">Adam Schott Website - http://AdamSchott.github.io</a>
+</p>
