--- a/week4/image.html
+++ b/week4/image.html
@@ -4,5 +4,5 @@
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
 </p>
 <p>
-    <a href="http://AdamSchott.github.io">Adam Schott Website - http://AdamSchott.github.io</a>
+    <a href="http://AdamSchott.github.io">Adam Schott Website</a>
 </p>
