--- a/week4/bacs200/amuse.html
+++ b/week4/bacs200/amuse.html
@@ -11,6 +11,8 @@
         <h1>Amusements</h1>
         <img src="https://shrinking-world.com/static/images/unc/bacs200/Bear_Logo.png" alt="Logo">
         <h2>Amusement #1</h2>
+        <img src="RuneScape_2_logo.png" alt="RuneScape_2_logo">
+
         <p>This is runescape, which is a game i used to love to play as a kid. It is an onlime MMORPG, where you can explore the world of medieval times.</p>
         <p>Description ... </p>
         <p><a href="http://google.com">Learn More ...</a></p>
