--- a/week4/bacs200/amuse.html
+++ b/week4/bacs200/amuse.html
@@ -15,7 +15,7 @@
 
         <p>This is runescape, which is a game i used to love to play as a kid. It is an onlime MMORPG, where you can explore the world of medieval times.</p>
         <p>Description ... </p>
-        <p><a href="http://google.com">Learn More ...</a></p>
+        <p><a href="https://www.runescape.com/community">Explore Runescape ...</a></p>
 
 
 
