--- a/week4/bacs200/amuse.html
+++ b/week4/bacs200/amuse.html
@@ -11,7 +11,7 @@
         <h1>Amusements</h1>
         <img src="https://shrinking-world.com/static/images/unc/bacs200/Bear_Logo.png" alt="Logo">
         <h2>Runescape Video Game</h2>
-        <img src="RuneScape_2_logo.png" alt="RuneScape_2_logo">
+        <img src="https://upload.wikimedia.org/wikipedia/en/a/a7/Old_School_Runescape_Logo.png" alt="RuneScape_2_logo">
 
         <p>This is runescape, which is a game i used to love to play as a kid. It is an onlime MMORPG, where you can explore the world of medieval times.</p>
         <p>Description ... </p>
