--- a/week4/bacs200/amuse.html
+++ b/week4/bacs200/amuse.html
@@ -34,6 +34,7 @@
     </head>
     <body>
         <h2>Amusement #2</h2>
+         <img src="https://content-images.p-cdn.com/images/public/int/5/7/9/6/886444216975_1080W_1080H.jpg" alt="James Taylor">
         <p>This is runescape, which is a game i used to love to play as a kid. It is an onlime MMORPG, where you can explore the world of medieval times.</p>
         <p>Description ... </p>
         <p><a href="https://www.youtube.com/watch?v=QAaAhi37IHg&list=RDMM7yoGKANQeKw&index=10">Listen here ...</a></p>
