--- a/week4/bacs200/amuse.html
+++ b/week4/bacs200/amuse.html
@@ -33,9 +33,9 @@
 <br>    
     </head>
     <body>
-        <h2>Amusement #2</h2>
+        <h2>James Taylor - Copperline</h2>
          <img src="https://content-images.p-cdn.com/images/public/int/5/7/9/6/886444216975_1080W_1080H.jpg" alt="James Taylor">
-        <p>This is runescape, which is a game i used to love to play as a kid. It is an onlime MMORPG, where you can explore the world of medieval times.</p>
+        <p>This is a song by James Taylor named Copperline in which he plays with a band in the studio. This song reminds me of fall and the East Coast colors. Take a listen below.</p>
         <p>Description ... </p>
         <p><a href="https://www.youtube.com/watch?v=QAaAhi37IHg&list=RDMM7yoGKANQeKw&index=10">Listen here ...</a></p>
         
