--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -12,7 +12,7 @@
     <h1>My Profile</h1>
     <p>This is a profile of me<p>
 <b>
-    <img src="https://unco.instructure.com/images/thumbnails/6874948/6cKRHcvLYVJ5Dtuf8QIHVWktRLZYSKwh8y1zCYI5" alt="adam">
+    <h2><img src="https://unco.instructure.com/images/thumbnails/6874948/6cKRHcvLYVJ5Dtuf8QIHVWktRLZYSKwh8y1zCYI5" alt="adam"> </h2>
 <b>
 <b>
 
