--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>My Profile</h1>
-    <p>This is a profile of me<p>
+    <p>This is a profile of me -Adam Schott<p>
 <b>
     <h2><img src="https://unco.instructure.com/images/thumbnails/6874948/6cKRHcvLYVJ5Dtuf8QIHVWktRLZYSKwh8y1zCYI5" alt="adam" width=400 height="400"> </h2>
 <b>
