--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -10,9 +10,9 @@
 
 <body>
     <h1>My Profile</h1>
-    <p>This is a profile of me -Adam Schott<p>
+    <p>My name is Adam Schott. I am a Senior Marketing Major at UNCo.<p>
 <b>
-    <h2><img src="C:\Users\Adam Schott\Pictures\img/adamphot.jpg" alt="adam" width=400 height="400"> </h2>
+    <h2><img src="https://media-exp1.licdn.com/dms/image/C4E03AQGbAlubIzDYfw/profile-displayphoto-shrink_800_800/0/1617419185456?e=1636588800&v=beta&t=pWtrLRR8xps27FaHQIILzvnaAYLEg4lmZ60OEhkN0MQ" alt="adam" width=400 height="400"> </h2>
 <b>
 <b>
 
