--- a/bacs200/amuse.html
+++ b/bacs200/amuse.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-        <h1>Amusements</h1>
+        <h1>Things That Amuse Me :)</h1>
         <img src="https://shrinking-world.com/static/images/unc/bacs200/Bear_Logo.png" alt="Logo">
         <br>
 <br>
