--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Adam Schott Profile</h1>
+    <h1>Adam Schott</h1>
     <p>My name is Adam Schott. I am a Senior Marketing Major at UNCo.<p>
 <b>
     <h2><img src="https://media-exp1.licdn.com/dms/image/C4E03AQGbAlubIzDYfw/profile-displayphoto-shrink_800_800/0/1617419185456?e=1636588800&v=beta&t=pWtrLRR8xps27FaHQIILzvnaAYLEg4lmZ60OEhkN0MQ" alt="adam" width=400 height="400"> </h2>
