--- a/bacs200/amuse.html
+++ b/bacs200/amuse.html
@@ -18,7 +18,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/en/a/a7/Old_School_Runescape_Logo.png" alt="RuneScape_2_logo">
 
         <p>This is runescape, which is a game i used to love to play as a kid. It is an onlime MMORPG, where you can explore the world of medieval times.</p>
-        <p><a href="https://www.runescape.com/community">Explore Runescape ...</a></p>
+        <p><a href="https://www.runescape.com/community">Play Runescape ...</a></p>
 <br>
 <br>
 <br>
