--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -5,8 +5,10 @@
 <br>
 <br>
 
-<p>This is where you build you pages.</p>
+<p>Adam's Special Interests</p>
 <ul>
-    <li>Week 1 - <a href="../index.html">Project 1 - Github Repo</a> </li>
-    <li>Week 2 - <a href="inspire.html">Project 2 - Inspire Me</a> </li>
+    <li>Gardening and Landscaping
+    <li>Playing Old Man's Basketball Every Thursday
+    <li>Hiking and Climbing Big Mountains
+    <li>Graduating from the University of Northern Colorado
 </ul>
