--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -1,5 +1,5 @@
-<h1>Hello</h1>
-  
+<h1>Hello Everyone</h1>
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,7 +13,8 @@
 
     <h2>TED Talks</h2>
     <h3>Daniel Pink - The Puzzle of Motivation</h3>
-    <iframe width="780" height="439" src="https://www.youtube.com/embed/rrkrvAUbU9Y" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    <iframe width="780" height="439" src="https://www.youtube.com/embed/rrkrvAUbU9Y"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 
     </iframe>
     <ul>
@@ -23,19 +24,22 @@
     </ul>
 
     <h3>Adam Grant - Originals</h3>
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/fxbCHn6gE3U" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/fxbCHn6gE3U"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <hr>
 
     <h2>RSA Animate</h2>
     <h3>Daniel Pink - Drive</h3>
-    <iframe width="780" height="439" src="https://www.youtube.com/embed/IhJ4CDCfASI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    <iframe width="780" height="439" src="https://www.youtube.com/embed/IhJ4CDCfASI"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
     <p>
         video #2
     </p>
     <h3>Divided Brain</h3>
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/dFs9WO2B8uI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/dFs9WO2B8uI"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 
