--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -1,5 +1,12 @@
 <h1>Hello Everyone</h1>
-
+<table>
+    <tbody><tr>
+        <td>This is some data</td>
+    </tr>
+</tbody></table>
+<br>
+<br>
+<br>
 <!DOCTYPE html>
 <html lang="en">
 
