--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -1,9 +1,21 @@
-<h1>Hello Everyone</h1>
-<table>
-    <tbody><tr>
-        <td>This is some data</td>
-    </tr>
-</tbody></table>
+<h1>Educate</h1>
+ <table>
+  <tr>
+    <th>Jimmy</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>26</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>banjo</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table> 
 <br>
 <br>
 <br>
@@ -48,24 +60,6 @@
     <iframe width="1280" height="720" src="https://www.youtube.com/embed/dFs9WO2B8uI"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-</body>
-
- <table>
-  <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
-  </tr>
-  <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-  </tr>
-  <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-  </tr>
-</table>     
+</body>   
     
 </html>
