--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -1,7 +1,7 @@
 <h1>Educate</h1>
  <table>
   <tr>
-    <th>Jimmy</th>
+    <th></th>
     <th>Contact</th>
     <th>Country</th>
   </tr>
@@ -42,8 +42,8 @@
         <li>Idea #3</li>
     </ul>
 
-    <h3>Adam Grant - Originals</h3>
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/fxbCHn6gE3U"
+    <h3>Simon Sinek - How great leaders inspire action</h3>
+    <iframe width="1300" height="720" src="https://www.youtube.com/watch?v=qp0HIF3SfI4"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <hr>
@@ -53,7 +53,7 @@
     <iframe width="780" height="439" src="https://www.youtube.com/embed/IhJ4CDCfASI"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
-    <p>
+    <p> 
         video #2
     </p>
     <h3>Divided Brain</h3>
