--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -31,8 +31,8 @@
     <h1>Educate and Entertain</h1>
 
     <h2>TED Talks</h2>
-    <h3>Daniel Pink - The Puzzle of Motivation</h3>
-    <iframe width="780" height="439" src="https://www.youtube.com/embed/rrkrvAUbU9Y"
+    <h3>Daniel Levitin - How to stay calm when you know you'll be stressed</h3>
+    <iframe width="780" height="439" src="https://www.youtube.com/watch?v=8jPQjjsBbIc"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 
     </iframe>
