--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -61,5 +61,6 @@
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>   
-    
+  
+ <iframe width="1214" height="683" src="https://www.youtube.com/embed/8jPQjjsBbIc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </html>
