--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -32,8 +32,9 @@
 
     <h2>TED Talks</h2>
     <h3>Daniel Levitin - How to stay calm when you know you'll be stressed</h3>
-    <iframe width="780" height="439" src="https://www.youtube.com/watch?v=8jPQjjsBbIc"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+     <iframe width="1214" height="683" src="https://www.youtube.com/embed/8jPQjjsBbIc" title="YouTube video player" frameborder="0" 
+             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
     </iframe>
     <ul>
@@ -43,8 +44,8 @@
     </ul>
 
     <h3>Simon Sinek - How great leaders inspire action</h3>
-    <iframe width="1300" height="720" src="https://www.youtube.com/watch?v=qp0HIF3SfI4"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1209" height="683" src="https://www.youtube.com/embed/qp0HIF3SfI4" title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <hr>
 
@@ -62,5 +63,4 @@
 
 </body>   
   
- <iframe width="1214" height="683" src="https://www.youtube.com/embed/8jPQjjsBbIc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </html>
