--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -32,9 +32,7 @@
 
     <h2>TED Talks</h2>
     <h3>Daniel Levitin - How to stay calm when you know you'll be stressed</h3>
-     <iframe width="1214" height="683" src="https://www.youtube.com/embed/8jPQjjsBbIc" title="YouTube video player" frameborder="0" 
-             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+     <iframe width="1214" height="683" src="https://www.youtube.com/embed/8jPQjjsBbIc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </iframe>
     <ul>
@@ -44,8 +42,7 @@
     </ul>
 
     <h3>Simon Sinek - How great leaders inspire action</h3>
-    <iframe width="1209" height="683" src="https://www.youtube.com/embed/qp0HIF3SfI4" title="YouTube video player" frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="1209" height="683" src="https://www.youtube.com/embed/qp0HIF3SfI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <hr>
 
