--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -1,8 +1,8 @@
 <h1>Educate</h1>
  <table>
   <tr>
-    <th></th>
-    <th>Contact</th>
+    <th>Daniel Levitin</th>
+    <th>Simon Sinek</th>
     <th>Country</th>
   </tr>
   <tr>
