--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -3,11 +3,15 @@
   <tr>
     <th>Daniel Levitin</th>
     <th>Simon Sinek</th>
-    <th>Country</th>
+    <th>Adam Grant</th>
   </tr>
   <tr>
-    <td>26</td>
-    <td>Maria Anders</td>
+    <td>
+<a href="https://www.youtube.com/watch?v=8jPQjjsBbIc">link text</a>
+</td>
+    <td>
+<a href="https://www.youtube.com/watch?v=qp0HIF3SfI4">link text</a>
+</td>
     <td>Germany</td>
   </tr>
   <tr>
