--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -7,12 +7,14 @@
   </tr>
   <tr>
     <td>
-<a href="https://www.youtube.com/watch?v=8jPQjjsBbIc">link text</a>
+<a href="https://www.youtube.com/watch?v=8jPQjjsBbIc">Youtube Link...</a>
 </td>
     <td>
-<a href="https://www.youtube.com/watch?v=qp0HIF3SfI4">link text</a>
+<a href="https://www.youtube.com/watch?v=qp0HIF3SfI4">Youtube Link...</a>
 </td>
-    <td>Germany</td>
+    <td>
+<a href="https://www.youtube.com/watch?v=fxbCHn6gE3U&t=5s">Youtube Link...</a>
+</td>
   </tr>
   <tr>
     <td>banjo</td>
