--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -1,27 +1,27 @@
 <h1>Educate</h1>
- <table>
-  <tr>
-    <th>Daniel Levitin</th>
-    <th>Simon Sinek</th>
-    <th>Adam Grant</th>
-  </tr>
-  <tr>
-    <td>
-<a href="https://www.youtube.com/watch?v=8jPQjjsBbIc">Youtube Link...</a>
-</td>
-    <td>
-<a href="https://www.youtube.com/watch?v=qp0HIF3SfI4">Youtube Link...</a>
-</td>
-    <td>
-<a href="https://www.youtube.com/watch?v=fxbCHn6gE3U&t=5s">Youtube Link...</a>
-</td>
-  </tr>
-  <tr>
-    <td>banjo</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-  </tr>
-</table> 
+<table>
+    <tr>
+        <th>Daniel Levitin</th>
+        <th>Simon Sinek</th>
+        <th>Adam Grant</th>
+    </tr>
+    <tr>
+        <td>
+            <a href="https://www.youtube.com/watch?v=8jPQjjsBbIc">Youtube Link...</a>
+        </td>
+        <td>
+            <a href="https://www.youtube.com/watch?v=qp0HIF3SfI4">Youtube Link...</a>
+        </td>
+        <td>
+            <a href="https://www.youtube.com/watch?v=fxbCHn6gE3U&t=5s">Youtube Link...</a>
+        </td>
+    </tr>
+    <tr>
+        <td>banjo</td>
+        <td>Francisco Chang</td>
+        <td>Mexico</td>
+    </tr>
+</table>
 <br>
 <br>
 <br>
@@ -38,7 +38,9 @@
 
     <h2>TED Talks</h2>
     <h3>Daniel Levitin - How to stay calm when you know you'll be stressed</h3>
-     <iframe width="1214" height="683" src="https://www.youtube.com/embed/8jPQjjsBbIc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1214" height="683" src="https://www.youtube.com/embed/8jPQjjsBbIc" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
     <ul>
         <li>Idea #1</li>
         <li>Idea #2</li>
@@ -46,17 +48,33 @@
     </ul>
 
     <h3>Simon Sinek - How great leaders inspire action</h3>
-  
+    <iframe width="1214" height="683" src="https://www.youtube.com/embed/fxbCHn6gE3U" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    <ul>
+        <li>Idea #1</li>
+        <li>Idea #2</li>
+        <li>Idea #3</li>
+    </ul>
     <hr>
+
+    <h3>Adam Grant - The surprising habits of original thinkers</h3>
+    <iframe width="1214" height="683" src="https://www.youtube.com/embed/fxbCHn6gE3U" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    <li>Idea #1</li>
+    <li>Idea #2</li>
+    <li>Idea #3</li>
+    </ul>
 
     <h2>RSA Animate</h2>
     <h3>Daniel Pink - Drive</h3>
-    
-    <p> 
+
+    <p>
         video #2
     </p>
     <h3>Divided Brain</h3>
 
-</body>   
-  
+</body>
+
 </html>
