--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -48,9 +48,7 @@
     </ul>
 
     <h3>Simon Sinek - How great leaders inspire action</h3>
-    <iframe width="1214" height="683" src="https://www.youtube.com/embed/fxbCHn6gE3U" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+    <iframe width="1209" height="683" src="https://www.youtube.com/embed/qp0HIF3SfI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <ul>
         <li>Idea #1</li>
         <li>Idea #2</li>
