--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -68,9 +68,7 @@
 
     <h2>RSA Animate</h2>
     <h3>Daniel Pink - Drive</h3>
-
-    <p>
-        video #2
+<iframe width="1207" height="683" src="https://www.youtube.com/embed/u5um8QWWRvo?list=PL39BF9545D740ECFF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
     <h3>Divided Brain</h3>
 
