--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Educate and Entertain</h1>e0c0
+    <i class="fa-solid fa-book-open-cover"></i><h1>Educate and Entertain</h1><i class="fa-solid fa-book-open-cover"></i>
     <br>
     <br>
     <br>
