--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <title>Educate and Entertain</title>
 </head>
-
+<i class="fa-solid fa-book-open-cover"></i>
 <body>
-    <i class="fa-solid fa-book-open-cover"></i><h1>Educate and Entertain</h1><i class="fa-solid fa-book-open-cover"></i>
+   <h1>Educate and Entertain</h1>
     <br>
     <br>
     <br>
