--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -41,6 +41,8 @@
     <iframe width="1214" height="683" src="https://www.youtube.com/embed/8jPQjjsBbIc" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
+        <h3>Key Takeaways</h3>
+
     <ul>
         <li>Idea #1</li>
         <li>Idea #2</li>
@@ -49,6 +51,7 @@
 
     <h3>Simon Sinek - How great leaders inspire action</h3>
     <iframe width="1209" height="683" src="https://www.youtube.com/embed/qp0HIF3SfI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <h3>Key Takeaways</h3>
     <ul>
         <li>Idea #1</li>
         <li>Idea #2</li>
@@ -59,9 +62,11 @@
     <iframe width="1214" height="683" src="https://www.youtube.com/embed/fxbCHn6gE3U" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
-    <li>Idea #1</li>
-    <li>Idea #2</li>
-    <li>Idea #3</li>
+            <h3>Key Takeaways</h3>
+    <ul>
+        <li>Idea #1</li>
+        <li>Idea #2</li>
+        <li>Idea #3</li>
     </ul>
 
         <hr>
