--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -48,16 +48,20 @@
         <li>Idea #2</li>
         <li>Idea #3</li>
     </ul>
-
+    <br>
+    <br>
     <h3>Simon Sinek - How great leaders inspire action</h3>
     <iframe width="1209" height="683" src="https://www.youtube.com/embed/qp0HIF3SfI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <h3>Key Takeaways</h3>
     <ul>
-        <li>Idea #1</li>
-        <li>Idea #2</li>
-        <li>Idea #3</li>
+        <li>Companies like Apple work their company based on what they believe in, rather than what they're trying to sell.</li>
+        <li>Products don't sell because they're always good products, they sell because company values want customers to purchase them.
+</li>
+        <li>Great leaders cause the people around them to become better and work towards a common goal of asking “why”.
+</li>
     </ul>
-
+    <br>
+    <br>
     <h3>Adam Grant - The surprising habits of original thinkers</h3>
     <iframe width="1214" height="683" src="https://www.youtube.com/embed/fxbCHn6gE3U" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -68,7 +72,8 @@
         <li>Idea #2</li>
         <li>Idea #3</li>
     </ul>
-
+    <br>
+    <br>
         <hr>
 
     <h2>RSA Animate</h2>
