--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -81,9 +81,11 @@
 <iframe width="1207" height="683" src="https://www.youtube.com/embed/u5um8QWWRvo?list=PL39BF9545D740ECFF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
  <ul>
-        <li>Idea #1</li>
-        <li>Idea #2</li>
-        <li>Idea #3</li>
+        <li>Procrastinating is sometimes a useful tool in promoting new ideas.
+</li>
+        <li>Starting on projects too early can lead to lack of innovation, which results in poor overall performance for a company.
+</li>
+        <li>Original thinkers spend an incredible time thinking about particular ideas, which allows them to Foster creativity. </li>
     </ul>
 </body>
 
