--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -44,9 +44,12 @@
         <h3>Key Takeaways</h3>
 
     <ul>
-        <li>Idea #1</li>
-        <li>Idea #2</li>
-        <li>Idea #3</li>
+        <li>Recognize when you're under stress, and be able to put things in place for when that happens.
+</li>
+        <li> In order to be calm when stressed, being prepared is an important way to mitigate this emotion.
+</li>
+        <li>Utilizing breathing methods can help you stay on task and calm yourself down.
+</li>
     </ul>
     <br>
     <br>
@@ -68,9 +71,9 @@
         allowfullscreen></iframe>
             <h3>Key Takeaways</h3>
     <ul>
-        <li>Idea #1</li>
-        <li>Idea #2</li>
-        <li>Idea #3</li>
+        <li>Procrastinating is sometimes a useful tool in promoting new ideas.</li>
+        <li>Starting on projects too early can lead to lack of innovation, which results in poor overall performance for a company.</li>
+        <li>Original thinkers spend an incredible time thinking about particular ideas, which allows them to Foster creativity. </li>
     </ul>
     <br>
     <br>
@@ -81,12 +84,11 @@
 <iframe width="1207" height="683" src="https://www.youtube.com/embed/u5um8QWWRvo?list=PL39BF9545D740ECFF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
  <ul>
-        <li>Procrastinating is sometimes a useful tool in promoting new ideas.
+        <li>Being too positive about yourself can lead a person to become complacent.
 </li>
-        <li>Starting on projects too early can lead to lack of innovation, which results in poor overall performance for a company.
+        <li>Examples of the 2008 financial crisis show that delusional thinking can lead to the demise of an economy.
 </li>
-        <li>Original thinkers spend an incredible time thinking about particular ideas, which allows them to Foster creativity. </li>
+        <li>Optimism can lead to a form of social control within a society, which needs to be analyzed in the social construct of which it was formed.</li>
     </ul>
-</body>
 
 </html>
