--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -29,9 +29,11 @@
         </td>
     </tr>
     <tr>
-        <td>How to stay calm when you know you'll be stressed       </td>
-        <td>How great leaders inspire action        </td>
-        <td>The surprising habits of original thinkers      </td>
+        <td>How to stay calm when 
+            you know you'll be stressed</td>
+        <td>How great leaders inspire action</td>
+        <td>The surprising habits 
+            of original thinkers</td>
     </tr>
 </table>
     <br>
