--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -4,3 +4,14 @@
 <br>
 <br>
 <br>
+<body>
+    <h1>BACS 200 Folder</h1>
+    <p>Projects for this class</p>
+    <ul>
+        <li>Week 1 - <a href="../index.html">Project 1 - Github Repo</a> </li>
+        <li>Week 2 - <a href="inspire.html">Project 2 - Inspire Me</a> </li>
+        <li>Week 3 - <a href="amuse.html">Project 3 - Amuse Me</a> </li>
+        <li>Week 4 - <a href="educate.html">Project 4 - Educate Me</a> </li>
+    </ul>
+    <a href="/demo">Weekly Code Demos</a>
+</body>
