--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -14,9 +14,8 @@
 <b>
 </body>
     
-    <h2><img src="https://media-exp1.licdn.com/dms/image/C4E03AQGbAlubIzDYfw/profile-displayphoto-shrink_800_800/0/1617419185456?e=1636588800&v=beta&t=pWtrLRR8xps27FaHQIILzvnaAYLEg4lmZ60OEhkN0MQ" alt="adam" width=200<h/2>
 <b>
-    <h2>    <img src="adamschott.jpg" alt="Adam Schott" width="200"></h2>
+    <h2>    <img src="adamschott.jpg" alt="Adam Schott" width="200" height="200"></h2>
 </html>
 <b>
 <b>
