--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blank Template</title>
+</head>
 <h1>Adam Schott - Home Page</h1>
 <p>I am learning HTML in BACS 200.</p>
 <p>Wow, it worked! I hope it starts getting fun.</p>
