--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -6,7 +6,7 @@
     <title>Educate and Entertain</title>
 </head>
 <i class="fa-solid fa-book-open-cover"></i>
-<body>
+
    <h1>Educate and Entertain</h1>
     <br>
     <br>
@@ -83,7 +83,7 @@
 
     <h2>RSA Animate</h2>
     <h3>Barbara Ehrenreich - Smile or Die</h3>
-<iframe width="1207" height="683" src="https://www.youtube.com/embed/u5um8QWWRvo?list=PL39BF9545D740ECFF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ <p><iframe width="1207" height="683" src="https://www.youtube.com/embed/u5um8QWWRvo?list=PL39BF9545D740ECFF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
  <ul>
         <li>Being too positive about yourself can lead a person to become complacent.
