--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -83,8 +83,8 @@
 
     <h2>RSA Animate</h2>
     <h3>Barbara Ehrenreich - Smile or Die</h3>
- <p><iframe width="1207" height="683" src="https://www.youtube.com/embed/u5um8QWWRvo?list=PL39BF9545D740ECFF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </p>
+ <iframe width="1207" height="683" src="https://www.youtube.com/embed/u5um8QWWRvo?list=PL39BF9545D740ECFF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   
  <ul>
         <li>Being too positive about yourself can lead a person to become complacent.
 </li>
