--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -26,7 +26,7 @@
     </ul>
 
         <table>
-        Project</th>
+        <th>Project</th>
         <th>Page</th>
         <th>Instructions</th>
         <th>Validate HTML</th>
