--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -7,7 +7,7 @@
 </head>
 <i class="fa-solid fa-book-open-cover"></i>
 
-   <h1>Educate and Entertain</h1>
+   <h1>Educate Me</h1>
     <br>
     <br>
     <br>
