--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Educate and Entertain</title>
+    <title>Educate Me</title>
 </head>
 <i class="fa-solid fa-book-open-cover"></i>
 
-   <h1>Educate Me</h1>
+   <h1>Educate and Entertain</h1>
     <br>
     <br>
     <br>
