--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -34,7 +34,7 @@ tr:nth-child(even) {
   <tr>
     <td>Batman</td>
     <td>Bruce Wayne</td>
-    <td><img src="img_chania.jpg" alt="Flowers in Chania"></td>
+    <td><img src="batman.png" alt="bat"></td>
     <td>Martial Arts</td>
     <td>Memories of Parents</td>
     
