--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -42,30 +42,30 @@ tr:nth-child(even) {
   <tr>
     <td>Spiderman</td>
     <td>Peter Parker</td>
-    <td>Mexico</td>
+    <td><img src="batman.png" alt="spid"></td>
     <td>Web Shooting</td>
     <td>Ethyl chloride</td>
   </tr>
   <tr>
     <td>Cptn. America</td>
     <td>Steve Rodgers</td>
-    <td>Austria</td>
+    <td><img src="batman.png" alt="Cptn."></td>
     <td>Super Soldier Strength</td>
     <td>A man out of time</td>
   </tr>
   <tr>
     <td>Aquaman</td>
     <td>Arthur Curry</td>
-    <td>UK</td>
+    <td><img src="batman.png" alt="Aqua"></td>
     <td>Underwater Capabilities</td>
     <td>Human Emotions</td>
   </tr>
   <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
+    <td>Shazam!</td>
+    <td>Billy Batson</td>
     <td>Canada</td>
-    <td>Germany</td>
-    <td>Germany</td>
+    <td>Transform into adult with superhuman powers</td>
+    <td>Electricity</td>
   </tr>
 </table>
 
