--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -56,7 +56,7 @@ tr:nth-child(even) {
   <tr>
     <td>Aquaman</td>
     <td>Arthur Curry</td>
-    <td><img src="batman.png" alt="Aqua"></td>
+    <td><img src="Justice_League_Aquaman.jpg" alt="Aqua"></td>
     <td>Underwater Capabilities</td>
     <td>Human Emotions</td>
   </tr>
