--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -68,6 +68,8 @@ tr:nth-child(even) {
     <td>Electricity</td>
   </tr>
 </table>
+  
+  <img src="batman.jpg" alt="batman" width="200" height="250">
 
 </body>
 </html>
