--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -42,14 +42,14 @@ tr:nth-child(even) {
   <tr>
     <td>Spiderman</td>
     <td>Peter Parker</td>
-    <td><img src="batman.png" alt="spid"></td>
+    <td><img src="Web_of_Spider-Man_Vol_1_129-1.png" alt="spid"></td>
     <td>Web Shooting</td>
     <td>Ethyl chloride</td>
   </tr>
   <tr>
     <td>Cptn. America</td>
     <td>Steve Rodgers</td>
-    <td><img src="batman.png" alt="Cptn."></td>
+    <td><img src="Chris-Evans-title-character-Joe-Johnston-Captain.jpg" alt="Cptn."></td>
     <td>Super Soldier Strength</td>
     <td>A man out of time</td>
   </tr>
