--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -64,12 +64,10 @@ tr:nth-child(even) {
     <td>Shazam!</td>
     <td>Billy Batson</td>
     <td>Canada</td>
-    <td>Transform into adult with superhuman powers</td>
+    <td><img src="shazam.jpg" alt="shazam"></td>
     <td>Electricity</td>
   </tr>
 </table>
-  
-  <img src="batman.jpg" alt="batman" width="200" height="250">
   
 
 </body>
