--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -34,7 +34,7 @@ tr:nth-child(even) {
   <tr>
     <td>Batman</td>
     <td>Bruce Wayne</td>
-    <td>  <img src="batman.jpg" alt="batman" width="200" height="250"></td>
+    <td>  <img src="batman.jpg" alt="batman" width="200" height="200"></td>
     <td>Martial Arts</td>
     <td>Memories of Parents</td>
     
@@ -42,21 +42,21 @@ tr:nth-child(even) {
   <tr>
     <td>Spiderman</td>
     <td>Peter Parker</td>
-    <td><img src="Web_of_Spider-Man_Vol_1_129-1.png" alt="spid"></td>
+    <td><img src="Web_of_Spider-Man_Vol_1_129-1.png" alt="spid" width="200" height="200"></td>
     <td>Web Shooting</td>
     <td>Ethyl chloride</td>
   </tr>
   <tr>
     <td>Cptn. America</td>
     <td>Steve Rodgers</td>
-    <td><img src="Chris-Evans-title-character-Joe-Johnston-Captain.jpg" alt="Cptn."></td>
+    <td><img src="Chris-Evans-title-character-Joe-Johnston-Captain.jpg" alt="Cptn." width="200" height="200"></td>
     <td>Super Soldier Strength</td>
     <td>A man out of time</td>
   </tr>
   <tr>
     <td>Aquaman</td>
     <td>Arthur Curry</td>
-    <td><img src="Justice_League_Aquaman.jpg" alt="Aqua"></td>
+    <td><img src="Justice_League_Aquaman.jpg" alt="Aqua" width="200" height="200"></td>
     <td>Underwater Capabilities</td>
     <td>Human Emotions</td>
   </tr>
@@ -64,7 +64,7 @@ tr:nth-child(even) {
     <td>Shazam!</td>
     <td>Billy Batson</td>
     <td>Canada</td>
-    <td><img src="shazam.jpg" alt="shazam"></td>
+    <td><img src="shazam.jpg" alt="shazam" width="200" height="200"></td>
     <td>Electricity</td>
   </tr>
 </table>
