--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 table {
-  font-family: arial, sans-serif;
+  font-family: Cursive 	Brush Script MT;
   border-collapse: collapse;
   width: 100%;
 }
