--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -34,7 +34,7 @@ tr:nth-child(even) {
   <tr>
     <td>Batman</td>
     <td>Bruce Wayne</td>
-    <td>  <img src="batman.jpg" alt="batman" width="200" height="200"></td>
+    <td><a href="https://www.qries.com/"><img src="batman.jpg" alt="batman" width="200" height="200"></td>
     <td>Martial Arts</td>
     <td>Memories of Parents</td>
     
