--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -63,8 +63,8 @@ tr:nth-child(even) {
   <tr>
     <td>Shazam!</td>
     <td>Billy Batson</td>
-    <td>Canada</td>
     <td><img src="shazam.jpg" alt="shazam" width="200" height="200"></td>
+    <td>Ability to turn into an Adult with Strength & Flying</td>
     <td>Electricity</td>
   </tr>
 </table>
