--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -34,7 +34,7 @@ tr:nth-child(even) {
   <tr>
     <td>Batman</td>
     <td>Bruce Wayne</td>
-    <td><a href="https://www.qries.com/"><img src="batman.jpg" alt="batman" width="200" height="200"></td>
+    <td><a href="https://images.tntdrama.com/tnt/$dyna_params/https%3A%2F%2Fi.cdn.tntdrama.com%2Fassets%2Fimages%2F2021%2F04%2FShazam-teaser-2048x1536.jpg"><img src="batman.jpg" alt="batman" width="200" height="200"></td>
     <td>Martial Arts</td>
     <td>Memories of Parents</td>
     
@@ -63,7 +63,7 @@ tr:nth-child(even) {
   <tr>
     <td>Shazam!</td>
     <td>Billy Batson</td>
-    <td><img src="shazam.jpg" alt="shazam" width="200" height="200"></td>
+    <td><a href="https://images.tntdrama.com/tnt/$dyna_params/https%3A%2F%2Fi.cdn.tntdrama.com%2Fassets%2Fimages%2F2021%2F04%2FShazam-teaser-2048x1536.jpg"><img src="shazam.jpg" alt="shazam" width="200" height="200"></td>
     <td>Ability to turn into an Adult with Strength & Flying</td>
     <td>Electricity</td>
   </tr>
