--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -42,7 +42,7 @@ tr:nth-child(even) {
   <tr>
     <td>Spiderman</td>
     <td>Peter Parker</td>
-    <td><a href="https://cdn.britannica.com/30/182830-050-96F2ED76/Chris-Evans-title-character-Joe-Johnston-Captain.jpg"><img src="Web_of_Spider-Man_Vol_1_129-1.png" alt="spid" width="200" height="200"></td>
+    <td><a href="https://upload.wikimedia.org/wikipedia/en/thumb/2/21/Web_of_Spider-Man_Vol_1_129-1.png/250px-Web_of_Spider-Man_Vol_1_129-1.png"><img src="Web_of_Spider-Man_Vol_1_129-1.png" alt="spid" width="200" height="200"></td>
     <td>Web Shooting</td>
     <td>Ethyl chloride</td>
   </tr>
