--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -34,7 +34,7 @@ tr:nth-child(even) {
   <tr>
     <td>Batman</td>
     <td>Bruce Wayne</td>
-    <td><a href="https://cdn.britannica.com/30/182830-050-96F2ED76/Chris-Evans-title-character-Joe-Johnston-Captain.jpg"><img src="batman.jpg" alt="batman" width="200" height="200"></td>
+    <td><a href="https://image.api.playstation.com/vulcan/img/rnd/202010/2621/H9v5o8vP6RKkQtR77LIGrGDE.png"><img src="batman.jpg" alt="batman" width="200" height="200"></td>
     <td>Martial Arts</td>
     <td>Memories of Parents</td>
     
@@ -56,7 +56,7 @@ tr:nth-child(even) {
   <tr>
     <td>Aquaman</td>
     <td>Arthur Curry</td>
-    <td><a href="https://cdn.britannica.com/30/182830-050-96F2ED76/Chris-Evans-title-character-Joe-Johnston-Captain.jpg"><img src="Justice_League_Aquaman.jpg" alt="Aqua" width="200" height="200"></td>
+    <td><a href="https://static.wikia.nocookie.net/injustice-2-mobile2242/images/7/74/Justice_League_Aquaman.png/revision/latest?cb=20200613022703"><img src="Justice_League_Aquaman.jpg" alt="Aqua" width="200" height="200"></td>
     <td>Underwater Capabilities</td>
     <td>Human Emotions</td>
   </tr>
