--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 table {
-  font-family: Cursive 	Brush Script MT;
+  font-family: "Lucida Console", "Courier New", monospace;;
   border-collapse: collapse;
   width: 100%;
 }
@@ -21,7 +21,7 @@ tr:nth-child(even) {
 </head>
 <body>
 
-<h2>HTML Table</h2>
+<h2>Superhero Table</h2>
 
 <table>
   <tr>
