--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -56,7 +56,7 @@ tr:nth-child(even) {
   <tr>
     <td>Aquaman</td>
     <td>Arthur Curry</td>
-    <td><a href="https://static.wikia.nocookie.net/injustice-2-mobile2242/images/7/74/Justice_League_Aquaman.png/revision/latest?cb=20200613022703"><img src="Justice_League_Aquaman.jpg" alt="Aqua" width="200" height="200"></td>
+    <td><a href="https://static.wikia.nocookie.net/injustice-2-mobile2242/images/7/74/Justice_League_Aquaman.png/revision/latest/scale-to-width-down/350?cb=20200613022703"><img src="Justice_League_Aquaman.jpg" alt="Aqua" width="200" height="200"></td>
     <td>Underwater Capabilities</td>
     <td>Human Emotions</td>
   </tr>
