--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -68,8 +68,7 @@ tr:nth-child(even) {
     <td>Electricity</td>
   </tr>
 </table>
-  
-
+<img src="bear.png" alt="bear" width="200" height="200"></td>
 </body>
 </html>
 
