--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -35,7 +35,7 @@ tr:nth-child(even) {
     <td>Batman</td>
     <td>Bruce Wayne</td>
     <td><a href="https://image.api.playstation.com/vulcan/img/rnd/202010/2621/H9v5o8vP6RKkQtR77LIGrGDE.png"><img src="batman.jpg" alt="batman" width="200" height="200"></td>
-    <td>Martial Arts</td>
+    <td>Expert Martial Arts</td>
     <td>Memories of Parents</td>
     
   </tr>
