--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -68,6 +68,12 @@
             <td><a href="https://shrinking-world.com/course/bacs200/project/05" target="instruction">Project 5</a></td>
 
         </tr>
+        <tr>
+            <td>PROJECT #6</td>
+            <td><a href="superhero.html">Test Me</a></td>
+            <td><a href="https://shrinking-world.com/course/bacs200/project/06" target="instruction">Project 5</a></td>
+
+        </tr>
     </table>
     
 </body>
