--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -63,7 +63,8 @@ tr:nth-child(even) {
   <tr>
     <td>Shazam!</td>
     <td>Billy Batson</td>
-    <td><a href="https://images.tntdrama.com/tnt/$dyna_params/https%3A%2F%2Fi.cdn.tntdrama.com%2Fassets%2Fimages%2F2021%2F04%2FShazam-teaser-2048x1536.jpg"><img src="shazam.jpg" alt="shazam" width="200" height="200"></td>
+    <td><a href="https://images.tntdrama.com/tnt/$dyna_params/https%3A%2F%2Fi.cdn.tntdrama.com%2Fassets%2Fimages%2F2021%2F04%2FShazam-teaser-2048x1536.jpg"><img src="shazam.jpg" alt="shazam" width="200" height="200">
+     </td>
     <td>Ability to turn into an Adult with Strength & Flying</td>
     <td>Electricity</td>
   </tr>
