--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -34,7 +34,11 @@ tr:nth-child(even) {
   <tr>
     <td>Batman</td>
     <td>Bruce Wayne</td>
-    <td><a href="https://image.api.playstation.com/vulcan/img/rnd/202010/2621/H9v5o8vP6RKkQtR77LIGrGDE.png"><img src="batman.jpg" alt="batman" width="200" height="200"></td>
+    <td>
+      <a href="https://image.api.playstation.com/vulcan/img/rnd/202010/2621/H9v5o8vP6RKkQtR77LIGrGDE.png">
+        <img src="batman.jpg" alt="batman" width="200" height="200">
+      </a>
+        </td>
     <td>Expert Martial Arts</td>
     <td>Memories of Parents</td>
     
