--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
 <style>
 table {
-  font-family: "Lucida Console", "Courier New", monospace;;
+  font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
@@ -17,6 +18,7 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 </style>
+</head>
 <body>
 
 <h2>Superhero Table</h2>
