--- a/index.html
+++ b/index.html
@@ -1,37 +1,3 @@
-
-Skip to content
-Pull requests
-Issues
-Marketplace
-Explore
-@AdamSchott
-AdamSchott /
-AdamSchott.github.io
-Public
-
-1
-0
-
-    0
-
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-
-    Settings
-
-AdamSchott.github.io/bacs200/index.html
-@AdamSchott
-AdamSchott Update index.html
-Latest commit b405aa6 1 hour ago
-History
-1 contributor
-34 lines (28 sloc) 11.6 KB
 <!DOCTYPE html>
 <html lang="en">
 
@@ -39,7 +5,7 @@ History
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adam's Test Page</title>
+    <title>Home Page</title>
 </head>
 
 <h1>BACS 200 Class Content</h1>
@@ -66,19 +32,3 @@ History
     </ul>
     <a href="/demo">Weekly Code Demos</a>
 </body>
-
-    © 2021 GitHub, Inc.
-    Terms
-    Privacy
-    Security
-    Status
-    Docs
-
-    Contact GitHub
-    Pricing
-    API
-    Training
-    Blog
-    About
-
-Loading complete
