--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Don't panic! This is the title</title>
+   <title>Superhero Gallery</title>
 <style>
 table {
   font-family: arial, sans-serif;
