--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -10,11 +10,11 @@
 <body>
 
     <header>
-        <h1>Wanted</h1>
-        <h2>Dead or Alive</h2>
+        <h1>WANTED</h1>
+        <h2>Dead!!!</h2>
     </header>
     <main>
-        <h1>Outlaw Name</h1>
+        <h1>"Darth Malak"</h1>
 
         <aside>
             <h2>Wanted For</h2>
