--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -19,9 +19,9 @@
         <aside>
             <h2>Wanted For</h2>
             <ul>
-                <li>Horse Thievin</li>
-                <li>Carousin</li>
-                <li>Skippen Class</li>
+                <li>Killing Jedi</li>
+                <li>Using the Star Forge for the Dark Side</li>
+                <li>Destroying Taris</li>
             </ul>
         </aside>
         <section>
