--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -30,9 +30,9 @@
             </p>
             <h2>Last seen</h2>
             <ul>
-                <li>Greeley, Colorado</li>
-                <li>Parts thereabout</li>
-                <li>With Uncle Baxter Tuhunnard</li>
+                <li>The Star Forge</li>
+                <li>Fighting the Republice</li>
+                <li>With Darth Reavan</li>
             </ul>
         </section>
 
