--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -32,7 +32,7 @@
             <ul>
                 <li>The Star Forge</li>
                 <li>Fighting the Republice</li>
-                <li>With Darth Reavan</li>
+                <li>With Darth Revan</li>
             </ul>
         </section>
 
