--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -31,7 +31,7 @@
             <h2>Last seen</h2>
             <ul>
                 <li>The Star Forge</li>
-                <li>Fighting the Republice</li>
+                <li>Fighting the Republic</li>
                 <li>With Darth Revan</li>
             </ul>
         </section>
