--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -17,7 +17,7 @@
         <h1>"Darth Malak"</h1>
 
         <aside>
-            <h2>Wanted For</h2>
+            <h2><u>Wanted For...</u></h2>
             <ul>
                 <li>Killing Jedi</li>
                 <li>Using the Star Forge for the Dark Side</li>
@@ -28,7 +28,7 @@
             <p>
                 <img src="288061-darthmalak.jpg" alt="This here bandit" width="500">
             </p>
-            <h2>Last seen</h2>
+            <h2><u>Last seen</u></h2>
             <ul>
                 <li>The Star Forge</li>
                 <li>Fighting the Republic</li>
