--- a/bacs200/wanted.html
+++ b/bacs200/wanted.html
@@ -11,7 +11,7 @@
 
     <header>
         <h1>W   A   N   T   E   D</h1>
-        <h2>Dead!!!</h2>
+        <h2>Dead!!!  -  5,000,000 Credits</h2>
     </header>
     <main>
         <h1>"Darth Malak"</h1>
