--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -31,7 +31,7 @@
   </div>
 </nav>
 
-    <div class="container-fluid p-5 bg-primary text-white text-center">
+    <div class="container-fluid p-5 bg-success text-white text-center">
         <a href="index.html" class="text-white">
             <h1> Bootstrap Page Template</h1>
         </a>
