--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -38,6 +38,7 @@
         <p>An Insight into business topics & happenings! </p>
     </div>
 
+ <h1 class="display-2">Display 2</h1>
     <div class="container mt-5">
         <div class="row">
 
@@ -55,7 +56,7 @@
         </div>
     </div>
   
-  
+ <h1 class="display-2">Display 2</h1> 
      <div class="container mt-5">
         <div class="row">
 
@@ -73,7 +74,7 @@
         </div>
     </div>
   
-  
+  <h1 class="display-2">Display 2</h1>
      <div class="container mt-5">
         <div class="row">
 
