--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -37,7 +37,7 @@
         </a>
         <p>An Insight into business topics & happenings! </p>
     </div>
-<h1 class="Is climate change the sink or swim we think it is?">Display 1</h1>
+<h1 class="Is climate change the sink or swim we think it is?">.bg-success</h1>
  <h1 class="Economic Implications">Display 2</h1>
     <div class="container mt-5">
         <div class="row">
