--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Logo</a>
+    <a class="navbar-brand" href="https://adamschott.github.io/bacs200/index.html">Logo</a>
        <img src="https://dbukjj6eu5tsf.cloudfront.net/sidearm.sites/unco.sidearmsports.com/images/responsive_2018/unco_logo_bear.svg" class="rounded" alt="Cinque Terre"> 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
