--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -19,13 +19,13 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/profile.html">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
         </li>    
       </ul>
     </div>
