--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -38,8 +38,10 @@
         </a>
         <p>An Insight into business topics & happenings! </p>
     </div>
+  
+  
 <h1 class=".bg-success">Is climate change the sink or swim we think it is?</h1>
- <h1 class="Economic Implications">Display 2</h1>
+ <h1 class="Economic Implications">Economic Implications</h1>
     <div class="container mt-5">
         <div class="row">
 
@@ -62,7 +64,7 @@
 <br>
 <br>   
 <br>  
- <h1 class="Political Implications">Display 2</h1> 
+ <h1 class="Political Implications">Political Implications</h1> 
      <div class="container mt-5">
         <div class="row">
 
@@ -85,7 +87,7 @@
 <br>
 <br>   
 <br> 
-  <h1 class="Social Implications">Display 2</h1>
+  <h1 class="Social Implications">Social Implications</h1>
      <div class="container mt-5">
         <div class="row">
        
