--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="https://adamschott.github.io/bacs200/index.html">Logo</a>
-       <img src="https://dbukjj6eu5tsf.cloudfront.net/sidearm.sites/unco.sidearmsports.com/images/responsive_2018/unco_logo_bear.svg" class="rounded" alt="Cinque Terre"> 
+    <img class="img-fluid" src="https://dbukjj6eu5tsf.cloudfront.net/sidearm.sites/unco.sidearmsports.com/images/responsive_2018/unco_logo_bear.svg" alt="Bear" width="50" height="75">    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -43,6 +43,8 @@
 <h1 class=".bg-success">Is climate change the sink or swim we think it is?</h1>
 <br>
 <br>
+<br>
+<br>  
   <h1 class="Economic Implications">Economic Implications</h1>
     <div class="container mt-5">
         <div class="row">
