--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="https://adamschott.github.io/bacs200/index.html">Logo</a>
+    <a class="navbar-brand" href="https://adamschott.github.io/bacs200/index.html"></a>
     <img class="img-fluid" src="https://dbukjj6eu5tsf.cloudfront.net/sidearm.sites/unco.sidearmsports.com/images/responsive_2018/unco_logo_bear.svg" alt="Bear" width="50" height="75">    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
     </div>
   
   
-<h1 class=".bg-success">Is climate change the sink or swim we think it is?</h1>
+<h1 class="container-fluid p-5 bg-success text-white text-center">Is climate change the sink or swim we think it is?</h1>
 <br>
 <br>
 <br>
