--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -45,8 +45,9 @@
 <br>
 <br>
 <br>  
-  <h1 class="Economic Implications">Economic Implications</h1>
-    <div class="container mt-5">
+  
+  <h1 class="display-1">Economic Implications</h1>
+
         <div class="row">
 
             <div class="col-sm">
@@ -68,7 +69,7 @@
 <br>
 <br>   
 <br>  
- <h1 class="Political Implications">Political Implications</h1> 
+ <h1 class="display-1">Political Implications</h1> 
      <div class="container mt-5">
         <div class="row">
 
@@ -91,7 +92,7 @@
 <br>
 <br>   
 <br> 
-  <h1 class="Social Implications">Social Implications</h1>
+  <h1 class="display-1">Social Implications</h1>
      <div class="container mt-5">
         <div class="row">
        
@@ -115,6 +116,7 @@
 <br>
 <br>
 <br>  
+  
 <h1 class="container-fluid p-5 bg-dark text-white text-center">Final Thoughts?</h1>
 div class="container mt-5">
         <div class="row">
