--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -47,11 +47,12 @@
 <br>  
   
   <h1 class="display-1">Economic Implications</h1>
-
+<br>   
+<br>
         <div class="row">
 
             <div class="col-sm">
-                <h3>PROS</h3>
+                <h3>class="text-success">PROS</h3>
                 <p>Part of the economic implications of climate change is that if the Earth were to be changing its overall temperature, then the economics of all major countries in the world would be affected by their dependability on natural resources. For example many fishermen and Farmers depend on the production of fishing and produce based on the seasonal patterns of the Earth's weather. If these patterns are disrupted anyway, then seasonal rains  may not be present in order to raise crops and livestock. Cities such as New Orleans as well, which sits below sea level in some areas, runs the risk of flooding and costly damage to its City. This takes a huge economical burden on cities to repair.
 </p>
             </div>
@@ -69,12 +70,15 @@
 <br>
 <br>   
 <br>  
+  
  <h1 class="display-1">Political Implications</h1> 
+<br>   
+<br>
      <div class="container mt-5">
         <div class="row">
 
             <div class="col-sm">
-                <h3>PROS</h3>
+                <h3>class="text-success">PROS</h3>
                 <p>One of the pros towards addressing climate change would be that it is an opportunity for the entire world to be United politically under the same goal of preserving environmental sustainability. This is a great way for Nations to collaboratively compete with one another and produce more sustainable products and promote the industry. Innovation in this case leads to great success and allows for the advancement of Nations and new political ideas. Additionally This is a great tool to put pressure on other countries to focus resources on better areas that can help promote more jobs within a country and opportunities that were otherwise not there. Climate change is something that would technically affect all the world, so the world can come together to combat this issue.
 </p>
             </div>
@@ -92,12 +96,15 @@
 <br>
 <br>   
 <br> 
+  
   <h1 class="display-1">Social Implications</h1>
+<br>   
+<br>
      <div class="container mt-5">
         <div class="row">
        
             <div class="col-sm">
-                <h3>PROS</h3>
+                <h3>class="text-success">PROS</h3>
                 <p>A few points in favor of combating climate change is that if climate change is not acted upon then it will continue to change millions of poor people who face greater challenges and extreme health and protect their livelihood. At the rate that the Earth would change, people would be subjected to Greater catastrophe and need to help one another which may not be easily done. If action is not taken as well, people may become displaced very easily and forced to move which can cause strain upon society as a whole. This displacement can cause a loss of Education, language, and overall cultural heritage that is necessary and being able to commune with several different types of people. An effort to combat this in theory would preserve the social order and overall characteristics that make up a society and how it can function in a first world country.
 </p>
             </div>
@@ -118,6 +125,8 @@
 <br>  
   
 <h1 class="container-fluid p-5 bg-dark text-white text-center">Final Thoughts?</h1>
+<br>   
+<br>
       <p>Overall, based on the research and pros and cons discussed in each of the three categories above I would  subscribe to the overall Viewpoint that climate change is an issue of importance but not  mediate importance.  Taking great strides towards promoting green and sustainable practices can have serious consequences on the economics,  politics, and social well-being of people all throughout the world. They're much more important issues that can be addressed through analytical research and specific results you're focused on. Issues like homelessness are easily recorded and can be alleviated if proper allocations of funds are given to programs to help them out. Although climate change is a way to unite the world together, uniting the world under amending social issues is a greater feat than climate change already. The Earth may be subject to harsh conditions and preventable disasters, but too much power in legislation can overall hurt people's ability to take care of one another. A combination of these two practices is best to mitigate both the issues currently facing people in the world and issues Yet to Come As a result of climate change. Thank you for reading this article oh, and have a wonderful day!
 </p>
               </body>
