--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -77,8 +77,8 @@
      <div class="container mt-5">
         <div class="row">
 
-            <div class="col-sm">
-                <h3>class="text-success">PROS</h3>
+            <div class="alert alert-success" role="alert">
+                <h3>class="PROS</h3>
                 <p>One of the pros towards addressing climate change would be that it is an opportunity for the entire world to be United politically under the same goal of preserving environmental sustainability. This is a great way for Nations to collaboratively compete with one another and produce more sustainable products and promote the industry. Innovation in this case leads to great success and allows for the advancement of Nations and new political ideas. Additionally This is a great tool to put pressure on other countries to focus resources on better areas that can help promote more jobs within a country and opportunities that were otherwise not there. Climate change is something that would technically affect all the world, so the world can come together to combat this issue.
 </p>
             </div>
@@ -127,7 +127,12 @@
 <h1 class="container-fluid p-5 bg-dark text-white text-center">Final Thoughts?</h1>
 <br>   
 <br>
-      <p>Overall, based on the research and pros and cons discussed in each of the three categories above I would  subscribe to the overall Viewpoint that climate change is an issue of importance but not  mediate importance.  Taking great strides towards promoting green and sustainable practices can have serious consequences on the economics,  politics, and social well-being of people all throughout the world. They're much more important issues that can be addressed through analytical research and specific results you're focused on. Issues like homelessness are easily recorded and can be alleviated if proper allocations of funds are given to programs to help them out. Although climate change is a way to unite the world together, uniting the world under amending social issues is a greater feat than climate change already. The Earth may be subject to harsh conditions and preventable disasters, but too much power in legislation can overall hurt people's ability to take care of one another. A combination of these two practices is best to mitigate both the issues currently facing people in the world and issues Yet to Come As a result of climate change. Thank you for reading this article oh, and have a wonderful day!
+  
+  <div class="badge badge-primary text-wrap" style="width: 6rem;">
+    
+        <p>Overall, based on the research and pros and cons discussed in each of the three categories above I would  subscribe to the overall Viewpoint that climate change is an issue of importance but not  mediate importance.  Taking great strides towards promoting green and sustainable practices can have serious consequences on the economics,  politics, and social well-being of people all throughout the world. They're much more important issues that can be addressed through analytical research and specific results you're focused on. Issues like homelessness are easily recorded and can be alleviated if proper allocations of funds are given to programs to help them out. Although climate change is a way to unite the world together, uniting the world under amending social issues is a greater feat than climate change already. The Earth may be subject to harsh conditions and preventable disasters, but too much power in legislation can overall hurt people's ability to take care of one another. A combination of these two practices is best to mitigate both the issues currently facing people in the world and issues Yet to Come As a result of climate change. Thank you for reading this article oh, and have a wonderful day!
+
+</div>
 </p>
               </body>
 </html>
