--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -40,7 +40,7 @@
     </div>
   
   
-<h1 class="container-fluid p-5 bg-success text-white text-center">Is climate change the sink or swim we think it is?</h1>
+<h1 class="container-fluid bg-light text-dark text-white text-center">Is climate change the sink or swim we think it is?</h1>
 <br>
 <br>
 <br>
