--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -40,7 +40,7 @@
     </div>
   
   
-<h1 class="container-fluid bg-light text-dark text-white text-center">Is climate change the sink or swim we think it is?</h1>
+<h1 class="container-fluid bg-dark text-white text-center">Is climate change the sink or swim we think it is?</h1>
 <br>
 <br>
 <br>
@@ -49,6 +49,7 @@
   <h1 class="display-1">Economic Implications</h1>
 <br>   
 <br>
+   <div class="container mt-5">
         <div class="row">
 
            <div class="alert alert-success" role="alert">
