--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -132,7 +132,7 @@
   <div class="badge badge-primary text-wrap" style="width: 6rem;">
     
         <p>Overall, based on the research and pros and cons discussed in each of the three categories above I would  subscribe to the overall Viewpoint that climate change is an issue of importance but not  mediate importance.  Taking great strides towards promoting green and sustainable practices can have serious consequences on the economics,  politics, and social well-being of people all throughout the world. They're much more important issues that can be addressed through analytical research and specific results you're focused on. Issues like homelessness are easily recorded and can be alleviated if proper allocations of funds are given to programs to help them out. Although climate change is a way to unite the world together, uniting the world under amending social issues is a greater feat than climate change already. The Earth may be subject to harsh conditions and preventable disasters, but too much power in legislation can overall hurt people's ability to take care of one another. A combination of these two practices is best to mitigate both the issues currently facing people in the world and issues Yet to Come As a result of climate change. Thank you for reading this article oh, and have a wonderful day!
-
+       <img class="img-fluid" src="plantearth.jpg" alt="Plant">  
 </div>
 </p>
               </body>
