--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -137,8 +137,8 @@
       </p>
   
     </div>
-      <img src="plantearth.jpg" class="rounded float-left" alt="..."><img src="plantearth.jpg" class="rounded float-right" alt="...">
-      
+  <img src="plantearth.jpg" class="rounded float-left" alt="...">
+  <img src="plantearth.jpg" class="rounded float-right" alt="...">
 </div>
 </p>
               </body>
